# SDL2Template

./: .gitignore  CMakeLists.txt
src/: Game.cpp  Game.hpp  main.cpp
src/EC/: EC.hpp  EC.inl
